--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/asm2asm"]
 	path = tools/asm2asm
 	url = https://github.com/chenzhuoyu/asm2asm
+[submodule "tools/sse2neon"]
+	path = tools/sse2neon
+	url = git@github.com:DLTcollab/sse2neon.git
